--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,73 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-155.7KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-6.36MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-155.7KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-432.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-465.2KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-445.0KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: cd4417a2-588c-485d-a796-ee6e090f8836, sni: hk64.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-469.4KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-465.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-469.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-465.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-469.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-465.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-469.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇨🇳 台湾-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-469.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-465.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-469.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-465.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-469.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-465.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-469.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -87,10 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
       - 🇨🇳 台湾-6.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-155.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-465.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-469.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
