--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-409.6KB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
-  - {name: 🇨🇳 中国-346.4KB/s(Youtube:不良林), server: hk6702.fans8.xyz, port: 443, type: trojan, password: cd4417a2-588c-485d-a796-ee6e090f8836, sni: hk6702.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-584.6KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.55MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-185.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.15MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: 0001.hk.genzpn.com, port: 80, type: vmess, uuid: 568a40cb-6c4b-4bd3-a80f-a5233529817b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 0001.hk.genzpn.com}}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 0001.us.genzpn.com, port: 80, type: vmess, uuid: 568a40cb-6c4b-4bd3-a80f-a5233529817b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 0001.us.genzpn.com}}
+  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 78fd25a0-e6df-11ec-9428-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-409.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-584.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-409.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-584.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-409.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-584.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-409.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-409.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-584.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-409.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-584.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-409.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-584.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-409.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-584.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
